fixed issue with horizontal scroll

--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -24,6 +24,6 @@
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .place__title {
     font-size: 32px;
-    margin-left: 5%;
+    margin-left: 3%;
   }
 }
